[project]
name = "langraph-refresher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.7.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "googlesearch-python>=1.3.0",
    "ipykernel>=7.2.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.30",
    "mcp[cli]>=1.27.2",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymongo>=4.17.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "pywin32>=312",
    "rich>=15.0.0",
    "ruff>=0.15.15",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
]
